Simplify each function